Fixed gap between navigation and other interests page being different from other pages

--- a/src/pages/other-interests/ImageCarousel.css
+++ b/src/pages/other-interests/ImageCarousel.css
@@ -24,3 +24,19 @@
 .carousel button:hover {
 	background-color: #3f3f46;
 }
+
+.carousel--heading {
+	font-size: x-large;
+	color: #4e9f3d;
+	text-align: center;
+
+	width: max-content;
+
+	margin-bottom: 15px;
+	margin-left: auto;
+	margin-right: auto;
+	padding: 10px;
+
+	border-radius: 10px;
+	background-color: #2d2e2d;
+}
