--- a/src/pages/other-interests/OtherInterests.css
+++ b/src/pages/other-interests/OtherInterests.css
@@ -1,28 +1,13 @@
 .other-interests-page {
 	margin-left: auto;
 	margin-right: auto;
-	padding-top: 5px;
-	padding-bottom: 5px;
+	margin-top: -20px;
+	padding-top: 10px;
+	padding-bottom: 15px;
 
 	word-break: break-all;
 	color: #d8e9a8;
 
 	width: 100%;
 	max-width: 960px;
-}
-
-.other-interests-page h2 {
-	font-size: x-large;
-	color: #4e9f3d;
-	text-align: center;
-
-	width: max-content;
-
-	margin: 15px;
-	margin-left: auto;
-	margin-right: auto;
-	padding: 10px;
-
-	border-radius: 10px;
-	background-color: #2d2e2d;
 }
